update build.gradle.kts